# video-generator

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  brand.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/commands/: brief.md  scene-review.md  template.md  video.md  voice.md
.claude/skills/elevenlabs/: SKILL.md
.claude/skills/ffmpeg/: SKILL.md
.claude/skills/frontend-design/: SKILL.md
.claude/skills/modal/: SKILL.md
.claude/skills/moviepy/: SKILL.md
.claude/skills/qwen-edit/: SKILL.md
.claude/skills/remotion/: SKILL.md
.claude/skills/remotion-official/: SKILL.md
briefs/: 000-smoke-test.md
docs/: overview.md  video-studio-setup.md
lib/: assets.ts  audio.ts  config.ts  orchestrator.ts  render.ts  scenes.ts
patterns/: orchestrator-cache.md
prompts/: expand-brief.md  scene-clip.md  scene-imagery.md
templates/hero-16x9/: Composition.tsx  Root.tsx
templates/hero-16x9/components/: FullscreenClipScene.tsx  LibraryClipScene.tsx  SceneRouter.tsx  SplitScreenScene.tsx  TextOverlayScene.tsx
templates/pod-9x16/: Composition.tsx  Root.tsx  index.ts
templates/pod-9x16/components/: Captions.tsx  FullscreenClipScene.tsx  GeneratedImageBgScene.tsx  LibraryClipScene.tsx  LowerThirdScene.tsx  SceneRouter.tsx
templates/recruitment-16x9/: Composition.tsx  Root.tsx
templates/recruitment-16x9/components/: CloseCardScene.tsx  FullscreenClipScene.tsx  OutroClipScene.tsx  PhoneMockupChatScene.tsx  SceneRouter.tsx  UiFormFillScene.tsx  UiStaticRevealScene.tsx
templates/recruitment-16x9/primitives/: ContactLockup.tsx  (+5 more)
(+5 files in other folders)
