[project]
name = "video-studio-py"
version = "0.1.0"
description = "Python side of the video studio: Modal jobs and moviepy post-processing"
requires-python = ">=3.11"
dependencies = [
  "modal>=0.66.0",
  "moviepy>=1.0.3",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
]

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modal_jobs"]
